--- a/konami/index.html
+++ b/konami/index.html
@@ -28,7 +28,7 @@
 	</script>
 	
 	<!-- For the Timer version -->
-	<!-- <script type="text/javascript">
+	<script type="text/javascript">
 		$(window).load(function() {
 			$('.button').raptorize({
 				'enterOn' : 'timer',
@@ -36,13 +36,13 @@
 			});
 		});
 	</script>	
-	-->
+	
 
 </head>
 <body>
 	<h1>Hey There!</h1>
 	
-	<p><a href="#" class="button">Click me</a> to activate the Raptorize plugin.</p>
+	<p><a href="#" class="button">Click me</a> to activate the cool Raptorize plugin.</p>
 	<p>You can also use the Konami-Code (on your keyboard type &uarr; &uarr; &darr; &darr; &larr; &rarr; &larr; &rarr; B A)</p>
 	
 </body>
