--- a/Phaser-Game/index.html
+++ b/Phaser-Game/index.html
@@ -3,23 +3,29 @@
     
 <head>
   <meta charset="utf-8" />
-  <title>Flappy B's</title>
+  <title>Flappy Bird Clone</title>
 
   <style>
-    #game_div {
-      width: 500px;
+    #game_div, p {
+      width: 400px;
       margin: auto;
-      margin-top: 50px;
+      margin-top: 20px;
     }
   </style>
 
   <script type="text/javascript" src="phaser.min.js"></script>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="load.js"></script>
+  <script type="text/javascript" src="menu.js"></script>
+  <script type="text/javascript" src="play.js"></script>
+  <script type="text/javascript" src="game.js"></script>
 </head>
 
 <body>
 
+  <p>Press the spacebar to flap</p>
+
   <div id="game_div"> </div>
+
 
 </body>
 
